# zst_compress

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yaml
src/: auxiliary.rs  batch.rs  batch_runner.rs  exec.rs  lib.rs  main.rs  runner.rs
tests/: cli.rs
