[package]
name = "zst_compress"
version = "0.1.11"
edition = "2021"
description = "Helper tool for `tar --zstd`"
documentation = "https://docs.rs/zst-compress"
readme = "README.md"
license = "GPL-2.0-or-later"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
