[package]
name = "zst_compress"
version = "0.3.3"
edition = "2024"
description = "Batch compress to or decompress dir/*.tar.zst"
documentation = "https://docs.rs/zst-compress"
readme = "README.md"
repository = "https://github.com/Zelin2001/zst_compress"
license = "GPL-2.0+"
keywords = ["compression", "zst", "tar", "batch", "decompression"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.23", features = ["derive"] }
glob = "0.3.3"
num_cpus = "1.16.0"
pipe = "0.4.0"
regex = "1.12.2"
tar = "0.4.44"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
